<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="br.com.ccard.linguagensprogramacao.MainActivity">

    <TextView
        android:id="@+id/tvJava"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/java__categoria"
        android:background="@color/Java_Categoria"
        />
    <TextView
        android:id="@+id/tvdotnet"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/dotnet_categoria"
        android:background="@color/DotNet_Categoria"
        />
    <TextView
        android:id="@+id/tvAngular"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/angularjs_categoria"
        android:background="@color/AngularJS_Categoria"
        />
    <TextView
        android:id="@+id/tvReact"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/react_categoria"
        android:background="@color/React_Categoria"
        />

    <TextView
        android:id="@+id/tvPython"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:text="@string/python_categoria"
        android:background="@color/Python_Categoria"
        />

</LinearLayout>
